# react-native-sdk

./: .cursorignore  .cursorindexingignore  .gitignore  .prettierrc.js  CHANGELOG.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  react-native-usercentrics.podspec  react-native.config.js
.apiiro-test/: README.md  vulnerabilities.kt  vulnerabilities.swift  vulnerabilities.ts
.cursor/rules/: android-native.mdc  ci-github-actions.mdc  ios-native.mdc  project-overview.mdc  react-native.mdc  security-snyk.mdc  testing.mdc  typescript-conventions.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude.yml  release.yml
android/: build-legacy.gradle  build.gradle  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/jni/: CMakeLists.txt  RNUsercentricsModule.cpp  rn_usercentrics.cpp
example/: app.json  generateAutolinking.js  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
example/android/: build.gradle  gradle.properties  gradle.properties.bak  gradlew  settings.gradle  settings.gradle.kts
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp  rncli.h
example/ios/: Podfile
example/ios/example/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/example.xcodeproj/: project.pbxproj
example/ios/example.xcworkspace/: contents.xcworkspacedata
example/ios/exampleTests/: BannerSettingsDictTests.swift  FirstLayerOptionsDictTests.swift  RNUsercentricsModuleTests.swift  ReadyStatusDictTests.swift  UserDecisionDictTests.swift  UsercentricsOptionsDictTests.swift  UsercentricsUISettingsDictTests.swift
example/patches/: react-native+0.78.3.patch  react-native-safe-area-context+4.14.1.patch  react-native-safe-area-context+4.5.0.patch  react-native-safe-area-context+5.6.0.patch  react-native-screens+3.20.0.patch  react-native-screens+3.37.0.patch  react-native-screens+4.14.0.patch  react-native-webview+11.26.1.patch
example/src/: App.tsx
example/src/screens/: Consent.tsx  CustomUI.tsx  CustomizationExamples.tsx  Home.tsx  WebviewIntegrationScreen.tsx  index.tsx
gradle/: libs.versions.toml
ios/: RNUsercentricsModule+TurboModule.mm  RNUsercentricsModule-Bridging-Header.h  RNUsercentricsModule.m  RNUsercentricsModule.mm  RNUsercentricsModule.swift  RNUsercentricsModuleSpec.h  UCRNFlag.swift  UsercentricsOptions+Dict.swift
ios/Errors/: RNUsercentricsModuleError.swift
ios/Extensions/: BannerInitCustomization+Dict.swift  BannerSettings+Dict.swift  CCPAData+Dict.swift  GppData+Dict.swift  GppSectionChangePayload+Dict.swift  ReadyStatus+Dict.swift  TCFData+Dict.swift  TCFUserDecisions+Dict.swift  UIColor+Extensions.swift  UIFont+UsercentricsFontDict.swift  UIImage+UsercentricsLogoDict.swift  UserDecision+Dict.swift  UserResponse+Dict.swift  UsercentricsAnalyticsEventType+Int.swift  UsercentricsCMPData+Dict.swift  UsercentricsConsentType+Int.swift  UsercentricsOptions+Dict.swift  UsercentricsServiceConsents+Dict.swift  UsercentricsUISettings+Dict.swift  UsercentricsUserInteraction+String.swift
ios/Manager/: DispatchQueueManager.swift  PresentationViewController.swift  UsercentricsManager.swift
ios/RNUsercentricsModule.xcodeproj/: project.pbxproj
legacy-sample/: app.json  babel.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js
legacy-sample/android/: build.gradle  gradle.properties  settings.gradle
legacy-sample/android/app/: _BUCK  build.gradle
legacy-sample/ios/: Podfile
legacy-sample/ios/legacysample.xcodeproj/: project.pbxproj
legacy-sample/ios/legacysample.xcworkspace/: contents.xcworkspacedata
legacy-sample/src/: App.tsx
sample/: .eslintrc.js  .gitignore  Gemfile  README.md  app.json  eslint.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
sample/android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
sample/gradle/: libs.versions.toml
sample/ios/: .xcode.env  AppDelegate.swift  Podfile  sample-Bridging-Header.h
sample/patches/: react-native+0.79.6.patch  react-native-gesture-handler+2.16.0.patch  react-native-safe-area-context+5.6.1.patch  react-native-screens+3.31.1.patch  react-native-screens+4.16.0.patch  react-native-screens+4.24.0.patch  react-native-webview+13.16.0.patch
sample/scripts/: clean-and-build.sh  clean-ios-cache  clean-ios-cache.sh  fix-react-logger.sh  fix-xcode-sandbox.sh  test-ios-build.sh
sample/src/: App.tsx
scripts/: assert_export.sh  auto-setup.sh  check-requirements.sh  clean-all-caches.sh  fix-metro.sh  generate-codegen-jni.js  install-dependencies.sh  install_dependencies.sh  instrumentation_tests.sh  measure_binary_sizes.sh  publish-local.js  publish-local.sh  run-android.sh  setup_gradle.sh  wait_emulator.sh
src/: NativeUsercentrics.ts  RNUsercentricsModule.ts  Usercentrics.tsx  index.tsx
src/__tests__/: index.test.ts  mocks.ts
src/fabric/: NativeUsercentricsModule.ts
src/models/: AdditionalConsentModeData.tsx  BannerInitCustomization.tsx  BannerSettings.tsx  CCPAData.tsx  CCPASettings.tsx  ConsentDisclosureObject.tsx  FirstLayerOptions.tsx  FirstLayerSettings.tsx  GeolocationRuleset.tsx  GppData.tsx  GppSectionChangePayload.tsx  LegalBasisLocalization.tsx  NetworkMode.tsx  SecondLayerOptions.tsx  SecondLayerSettings.tsx  TCF2Settings.tsx  TCFData.tsx  TCFDecisionUILayer.tsx  TCFUserDecisions.tsx  UserDecision.tsx  UsercentricsAnalyticsEventType.tsx  UsercentricsCMPData.tsx  UsercentricsCategory.tsx  UsercentricsConsentType.tsx  UsercentricsConsentUserResponse.tsx  UsercentricsLabels.tsx  UsercentricsLocation.tsx  UsercentricsLoggerLevel.tsx  UsercentricsOptions.tsx  UsercentricsReadyStatus.tsx  UsercentricsService.tsx  UsercentricsServiceConsent.tsx  UsercentricsSettings.tsx  UsercentricsUIOptions.tsx  UsercentricsUserInteraction.tsx  UsercentricsVariant.tsx  index.tsx
(+136 files in other folders)
